--- a/templates/index.html
+++ b/templates/index.html
@@ -273,7 +273,7 @@
         <header class="header">
             <h1>Michael Ogenyi</h1>
             <p>DevOps Engineer</p>
-            <p>john.doe@example.com</p>
+            <p>mogenyi10@yahoo.com</p>
             <p>Total Experience: 8+ Years</p>
         </header>
 
